sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: value =< is not a member of Int
 		while (i+ecart=<n) {
                              ^